<resources>
    <string name="app_name">jph</string>
    <string name="title_login">Login</string>
    <string name="title_sign_in">Sign In</string>
    <string name="account_login">Account Login</string>
    <string name="account_sign_in">Account Sign In</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_detail">MainActivity</string>
    <string name="comments">comments</string>
    <string name="user_name">User Name</string>
    <string name="no_internet_connection">No internet connection</string>
</resources>